--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -61,8 +61,8 @@
       <div class="container">
         <div class="row no-gutters">
           <div class="col-md-4">
-            <p>善良な市民同士で無差別に食欲を煽るSNS</p>
-            <%= image_tag('logo-white.png') %>
+            <!--<p>善良な市民同士で無差別に食欲を煽るSNS</p>-->
+            <%= image_tag('') %>
           </div>
           <div class="col-md-8">
             <h6 class="text-white mt-2 mb-3">Link</h6>
