--- a/app/views/public/posts/_list.html.erb
+++ b/app/views/public/posts/_list.html.erb
@@ -1,5 +1,5 @@
 <div class="card-list-container py-5">
-  <% @posts.each do |post| %>
+  <% posts.each do |post| %>
   <div class="card w-50 mx-auto mt-4 shadow-lg">
     <%= link_to post_path(post.id) do %>
       <%= image_tag post.get_image, class:"card-img-top"; %>
@@ -12,16 +12,16 @@
         <div class="col-10">
           <p class="card-title">
             <%= link_to(post_path(post.id), class:"text-dark") do %>
-              <strong><i class="fa-regular fa-flag"></i><span> <%= post_image.shop_name %></span></strong>
+              <strong><i class="fa-regular fa-flag"></i><span> <%= post.title %></span></strong>
             <% end %>
           </p>
-          <p class="card-text">説明：<%= post_image.caption %></p>
-          <span><i class="fa-solid fa-user"></i> By <%= post_image.user.name %> ｜ </span>
-          <span><%= link_to "#{posts.comments.count} コメント", post_path(poste.id), class:"text-dark" %></span>
+          <p class="card-text">本文：<%= post.body %></p>
+          <span><i class="fa-solid fa-user"></i> By <%= post.user.name %> ｜ </span>
+          <span><%= link_to "#{post.post_comments.count} コメント", post_path(post.id), class:"text-dark" %></span>
         </div>
       </div>
     </div>
   </div>
   <% end %>
-  <%= paginate @posts %>
+  <%= paginate post %>
 </div>
