--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,3 +1,5 @@
+posts/index
+
 <div class="card-list-container py-5">
   <% @posts.each do |post| %>
   <div class="card w-50 mx-auto mt-4 shadow-lg">
