--- a/app/views/public/posts/new.html.erb
+++ b/app/views/public/posts/new.html.erb
@@ -1,7 +1,9 @@
+posts/new
+
 <div class="container">
   <div class="row no-gutters">
     <div class="col-md-5 col-sm-10 mx-2 mx-sm-auto shadow-lg rounded px-0 my-5">
-      <h5 class="text-dark bg-light p-4 mb-0">画像投稿フォーム</h5>
+      <h5 class="text-dark bg-light p-4 mb-0">投稿フォーム</h5>
       <div class="form-body p-4">
         <% if @post.errors.any? %>
           <ul class="alert alert-danger" role="alert">
@@ -19,9 +21,9 @@
             <div class="input-group-prepend">
               <span class="input-group-text" aria-hidden="true"><i class="fa-solid fa-building"></i></span>
             </div>
-            <%= f.text_field :shop_name, class:"form-control", placeholder:"ショップ名" %>
+            <%= f.text_field :title, class:"form-control", placeholder:"タイトル" %>
           </div>
-          <%= f.text_area :caption, class:"form-control", rows:"3", placeholder:"コメントここに" %>
+          <%= f.text_area :body, class:"form-control", rows:"3", placeholder:"本文" %>
           <hr>
           <%= f.submit '投稿', class:"btn btn-lg btn-block btn-info mt-4" %>
         <% end %>
@@ -29,14 +31,3 @@
     </div>
   </div>
 </div>
-
-<h1>画像投稿フォーム</h1>
-<%= form_with model: @post do |f| %>
-  <h4>画像</h4>
-  <%= f.file_field :image, accept: "image/*" %>
-  <h4>タイトル</h4>
-  <%= f.text_field :title %>
-  <h4>本文</h4>
-  <%= f.text_area :cbody %>
-  <%= f.submit '投稿' %>
-<% end %>
