--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -14,12 +14,12 @@ posts/index
         <div class="col-10">
           <p class="card-title">
             <%= link_to(post_path(post.id), class:"text-dark") do %>
-              <strong><i class="fa-regular fa-flag"></i><span> <%= post_image.shop_name %></span></strong>
+              <strong><i class="fa-regular fa-flag"></i><span> <%= post.title %></span></strong>
             <% end %>
           </p>
-          <p class="card-text">説明：<%= post_image.caption %></p>
-          <span><i class="fa-solid fa-user"></i> By <%= post_image.user.name %> ｜ </span>
-          <span><%= link_to "#{posts.comments.count} コメント", post_path(poste.id), class:"text-dark" %></span>
+          <p class="card-text">説明：<%= post.body %></p>
+          <span><i class="fa-solid fa-user"></i> By <%= post.user.name %> ｜ </span>
+          <span><%= link_to "#{post.comments.count} コメント", post_path(post.id), class:"text-dark" %></span>
         </div>
       </div>
     </div>
