--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -47,7 +47,7 @@ posts/show
                 <p><%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %></p>
                 <p><%= comment.comment %></p>
                 <% if comment.user == current_user %>
-                  <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete, class: "btn btn-danger pull-right" %>
+                  <%= link_to "削除", post_comment_path(comment.post_id, comment), method: :delete, class: "btn btn-danger pull-right" %>
                 <% end %>
               </div>
             </div>
