--- a/app/views/public/posts/_side_bar.html.erb
+++ b/app/views/public/posts/_side_bar.html.erb
@@ -1,14 +1,13 @@
-
-<li>
-  <a class="flex w-full min-h-10 p-2  items-center bg-white rounded-full hover:bg-cwc-ash-gray-lighten-10 " rel="" target="" href="/urucamo/my-property/example">
+<div class="social">
+  <a class="flex w-full min-h-10 p-2  items-center bg-white rounded-full hover:bg-cwc-ash-gray-lighten-10 " rel="" target="" href="/posts/index">
     <span class="relative">
-      <span class="h-6 w-6  pointer-events-none flex items-center justify-center">
+      <span class="h-6 w-6 pointer-events-none flex items-center justify-center">
+        <i class="fas fa-home"></i>
         <img alt="contents" loading="lazy" width="24" height="24" decoding="async" data-nimg="1" class="w-full" src="/posts" style="color: transparent;">
       </span>
     </span>
     <span class="ml-1">
-      <span class="text-small-ja text-black   " title="">HOME
-      </span>
+      <span class="text-small-ja text-black" title="">HOME</span>
     </span>
   </a>
-</li>
+</div>
