--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
 <html>
+  
+  <img src="/images/building_shoping_supermarket.jpg">
+  
   <head>
     <title>Love-shopping</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -7,7 +10,7 @@
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
-    <script src="https://kit.fontawesome.com/xxxxxxxxxx.js" crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/354c6003fa.js" crossorigin="anonymous"></script>
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
