--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Store</title>
+    <title>Love-shopping</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
@@ -13,6 +13,18 @@
   <body>
      <header>
       <% if user_signed_in? %>
+        <li>
+          <%= link_to "新規投稿", new_post_path %>
+        </li>
+        <li>
+          <%= link_to "投稿一覧", posts_path %>
+        </li>
+        <li>
+          <%= link_to "マイページ", user_path(current_user.id) %>
+        </li>
+        <li>
+          <%= link_to "About", about_path %>
+        </li>
         <li>
           <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
         </li>
