--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -12,7 +12,7 @@ posts/index
     <div class="card-body">
       <div class="row">
         <div class="col-2">
-          <%= image_tag post.user.get_profile_image(100,100), class:"mt-3 rounded-circle"; %>
+          <%= image_tag post.user.get_profile_image(100, 100), class: "mt-3 rounded-circle" %>
         </div>
         <div class="col-10">
           <p class="card-title">
