--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -56,6 +56,12 @@ posts/show
           <% end %>
         </div>
         <hr>
+        <div class="user-link">
+          <p>投稿ユーザー画像：<%= image_tag @post.user.get_profile_image(100,100) %></p>
+          <p>ユーザーネーム：<%= @post.user.name %></p>
+          <p>投稿日時：<%= @post.created_at.strftime('%Y/%m/%d') %></p>
+        </div>
+        <hr>
         <div class="new-comment card-text">
           <%= form_with(model:[@post, @comment]) do |f| %>
             <div class="form-group">
