--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -12,7 +12,11 @@ posts/index
     <div class="card-body">
       <div class="row">
         <div class="col-2">
-          <%= image_tag post.user.get_profile_image(100, 100), class: "mt-3 rounded-circle" %>
+          <% if post.user %>
+            <%= image_tag post.user.get_profile_image(100, 100), class: "mt-3 rounded-circle" %>
+          <% else %>
+            <%= image_tag "default_profile_image.jpg", class: "mt-3 rounded-circle" %>
+          <% end %>
         </div>
         <div class="col-10">
           <p class="card-title">
