--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -13,7 +13,7 @@
           <% if post.user %>
             <%= image_tag post.user.get_profile_image(100, 100), class: "mt-3 rounded-circle" %>
           <% else %>
-            <%= image_tag "default_profile_image.jpg", class: "mt-3 rounded-circle" %>
+            <%= image_tag "/app/assets/images/default_profile_image.jpg", class: "mt-3 rounded-circle" %>
           <% end %>
         </div>
         <div class="col-10">
@@ -23,6 +23,11 @@
             <% end %>
           </p>
           <p class="card-text">説明：<%= post.body %></p>
+            <% if post.user %>
+              <span><i class="fa-solid fa-user"></i> By <%= post.user.name %> ｜ </span>
+            <% else %>
+              <span><i class="fa-solid fa-user"></i> By Unknown User ｜ </span>
+            <% end %>
           <span><i class="fa-solid fa-user"></i> By <%= post.user.name %> ｜ </span>
           <span><%= link_to "#{post.comments.count} コメント", post_path(post.id), class:"text-dark" %></span>
         </div>
