--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,10 +1,12 @@
 <div>
   <h3><%= @user.name %></h3>
-  <%= image_tag @user.get_profile_image(100,100) %>
+  
+      <%= image_tag @user.get_profile_image(100,100) %>
+        
   <% if @user == current_user %>
     <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
   <% end %>
 </div>
 
-<!-- ユーザーの投稿一覧 -->
+ <!--ユーザーの投稿一覧 仮置き-->
 <%= render 'public/posts/list', posts: @posts %>
