--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,8 +1,6 @@
 <!DOCTYPE html>
 <html>
   
-  <img src="/images/building_shoping_supermarket.jpg">
-  
   <head>
     <title>Love-shopping</title>
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -14,7 +12,11 @@
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
-
+  
+  <<div class="shop画像">
+    <%= image_tag "/app/assets/images/LOVE-SHOPPING.PNG" %>
+  </div>
+  
   <body class="d-flex flex-column vh-100">
     <header class="shadow-sm">
       <nav class="navbar navbar-expand-lg navbar-light">
