--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -1,5 +1,14 @@
+<% if @user.errors.any? %>
+  <%= @user.errors.count %>件のエラーが発生しました
+  <ul>
+    <% @user.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
+
 <% if current_user.id == @user.id %>
-  ここに編集画面のコンテンツを配置します。
+  <!--ここに編集画面のコンテンツを配置します。-->
 <% else %>
   <%= link_to "マイページへリダイレクト", mypage_path %>
 <% end %>
