--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -13,8 +13,8 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   
-  <<div class="shop画像">
-    <%= image_tag "/app/assets/images/LOVE-SHOPPING.PNG" %>
+  <div class="shop画像">
+    <%= image_tag("LOVE-SHOPPING.PNG", width: 600, height: 300) %>
   </div>
   
   <body class="d-flex flex-column vh-100">
