--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -8,5 +8,31 @@
   <% end %>
 </div>
 
- <!--ユーザーの投稿一覧 仮置き-->
-<%= render 'public/posts/list', posts: @posts %>
+ <!--ユーザーの投稿一覧 -->
+<div class="card-list-container py-5">
+  <% @user.posts.each do |post| %>
+    <div class="card w-50 mx-auto mt-4 shadow-lg">
+      <%= link_to post_path(post.id) do %>
+        <%= image_tag post.get_image, class:"card-img-top"; %>
+      <% end %>
+      <div class="card-body">
+      <div class="row">
+        <!--<div class="col-2">-->
+        <!--  <%= image_tag post.user.get_profile_image(100,100), class:"mt-3 rounded-circle"; %>-->
+        <!--</div>-->
+        <div class="col-10">
+          <p class="card-title">
+            <%= link_to(post_path(post.id), class:"text-dark") do %>
+              <strong><i class="fa-regular fa-flag"></i><span> <%= post.title %></span></strong>
+            <% end %>
+          </p>
+          <p class="card-text">本文：<%= post.body %></p>
+          <span><i class="fa-solid fa-user"></i> By <%= post.user.name %> ｜ </span>
+          <span><%= link_to "#{post.comments.count} コメント", post_path(post.id), class:"text-dark" %></span>
+        </div>
+      </div>
+    </div>
+  </div>
+  <% end %>
+  <%= paginate posts %>
+</div>
