--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -1,6 +1,9 @@
 <div class="post-detail py-5 bg-light">
   <div class="container">
     <div class="card mx-auto mt-4 shadow-lg">
+       <% if @post.errors.any? %>
+         編集に失敗しました
+       <% end %>
       <%= image_tag @post.get_image, class:"card-img-top" %>
       <div class="card-body">
 
