--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,9 @@
         <li>
           <%= link_to "ログイン", new_user_session_path %>
         </li>
+        <li>
+          <%= link_to "About", about_path %>
+        </li>
       <% end %>
     </header>
     <%= yield %>
