--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -13,7 +13,7 @@
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
   
-  <div class="shop画像">
+  <div class="shop-pic">
     <%= image_tag("LOVE-SHOPPING.PNG", width: 600, height: 300) %>
   </div>
   
