--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,34 +11,54 @@
   </head>
 
   <body>
-     <header>
-      <% if user_signed_in? %>
-        <li>
-          <%= link_to "新規投稿", new_post_path %>
-        </li>
-        <li>
-          <%= link_to "投稿一覧", posts_path %>
-        </li>
-        <li>
-          <%= link_to "マイページ", user_path(current_user.id) %>
-        </li>
-        <li>
-          <%= link_to "About", about_path %>
-        </li>
-        <li>
-          <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-        </li>
-      <% else %>
-        <li>
-          <%= link_to "新規登録", new_user_registration_path %>
-        </li>
-        <li>
-          <%= link_to "ログイン", new_user_session_path %>
-        </li>
-        <li>
-          <%= link_to "About", about_path %>
-        </li>
-      <% end %>
+    <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+        <div class="container">
+          <a class="navbar-brand" href="/">
+            <%= image_tag("LOVE-SHOPPING_logo-yoko.PNG", width: 400, height: 100) %>
+          </a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="navbar-collapse collapse show" id="navbarNavDropdown" style>
+            <ul class="navbar-nav ml-auto">
+              <% if user_signed_in? %>
+                <!--<li>-->
+                <!--  <%= link_to "Home", homes_path %>-->
+                <!--</li>-->
+                <li>
+                  <%= link_to "新規投稿", new_post_path %>
+                </li>
+                <li>
+                  <%= link_to "投稿一覧", posts_path %>
+                </li>
+                <li>
+                  <%= link_to "マイページ", user_path(current_user.id) %>
+                </li>
+                <li>
+                  <%= link_to "About", about_path %>
+                </li>
+                <li>
+                  <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+                </li>
+              <% else %>
+                <!--<li>-->
+                <!--  <%= link_to "Home", homes_path %>-->
+                <!--</li>-->
+                <li>
+                  <%= link_to "新規登録", new_user_registration_path %>
+                </li>
+                <li>
+                  <%= link_to "ログイン", new_user_session_path %>
+                </li>
+                <li>
+                  <%= link_to "About", about_path %>
+                </li>
+              <% end %>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </header>
     <%= yield %>
   </body>
