--- a/app/views/public/users/show.html.erb
+++ b/app/views/public/users/show.html.erb
@@ -1,10 +1,9 @@
 <div>
   <h3><%= @user.name %></h3>
-  
       <%= image_tag @user.get_profile_image(100,100) %>
-        
   <% if @user == current_user %>
     <p><%= link_to "プロフィール編集", edit_user_path(@user) %></p>
+    <p><%= link_to '退会する', user_path(@user), method: :delete, data: { confirm: '本当に退会しますか？' } %></p>
   <% end %>
 </div>
 
