--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,43 +1,46 @@
-<!--side_barの呼び出し-->
-<%= render 'side_bar', post: @posts %>
-
-<div class="card-list-container py-5">
-  <% @posts.each do |post| %>
-  <div class="card w-50 mx-auto mt-4 shadow-lg">
-    <%= link_to post_path(post.id) do %>
-      <%= image_tag post.get_image, class:"card-img-top"; %>
-    <% end %>
-    <div class="card-body">
-      <div class="row">
-        <div class="col-2">
-          <% if post.user %>
-            <%= image_tag post.user.get_profile_image(100, 100), class: "mt-3 rounded-circle" %>
-          <% else %>
-            <%= image_tag "/app/assets/images/default_profile_image.jpg", class: "mt-3 rounded-circle" %>
-          <% end %>
-        </div>
-        <div class="col-10">
-          <p class="card-title">
-            <%= link_to(post_path(post.id), class:"text-dark") do %>
-              <strong><i class="fa-regular fa-flag"></i><span> <%= post.title %></span></strong>
-            <% end %>
-          </p>
-          <p class="card-text">本文：<%= post.body %></p>
-            <% if post.user %>
-              <span>
-                <i class="fa-solid fa-user"></i> By <%= link_to post.user.name, user_path(post.user) %> ｜ 
-              </span>
-            <% else %>
-              <span>
-                <i class="fa-solid fa-user"></i> By Unknown User ｜ 
-              </span>
-            <% end %>
-          
-          <span><%= link_to "#{post.comments.count} コメント", post_path(post.id), class:"text-dark" %></span>
+    <!--共通　side_barの呼び出し-->
+    <%= render 'side_bar', post: @posts %>
+    
+    <div class="card-list-container py-5">
+      <% @posts.each do |post| %>
+      <div class="card w-50 mx-auto mt-4 shadow-lg">
+        <%= link_to post_path(post.id) do %>
+          <%= image_tag post.get_image, class:"card-img-top"; %>
+        <% end %>
+        <div class="card-body">
+          <div class="row">
+            <div class="col-2">
+              <% if post.user %>
+                <%= image_tag post.user.get_profile_image(100, 100), class: "mt-3 rounded-circle" %>
+              <% else %>
+                <%= image_tag "/app/assets/images/default_profile_image.jpg", class: "mt-3 rounded-circle" %>
+              <% end %>
+            </div>
+            <div class="col-10">
+              <p class="card-title">
+                <%= link_to(post_path(post.id), class:"text-dark") do %>
+                  <strong><i class="fa-regular fa-flag"></i><span> <%= post.title %></span></strong>
+                <% end %>
+              </p>
+              <p class="card-text">本文：<%= post.body %></p>
+                <% if post.user %>
+                  <span>
+                    <i class="fa-solid fa-user"></i> By <%= link_to post.user.name, user_path(post.user) %> ｜ 
+                  </span>
+                <% else %>
+                  <span>
+                    <i class="fa-solid fa-user"></i> By Unknown User ｜ 
+                  </span>
+                <% end %>
+              
+              <span><%= link_to "#{post.comments.count} コメント", post_path(post.id), class:"text-dark" %></span>
+            </div>
+          </div>
         </div>
       </div>
+      <% end %>
+      <%= paginate @posts %>
     </div>
+  
   </div>
-  <% end %>
-  <%= paginate @posts %>
 </div>
