--- a/app/views/public/searches/search_result.html.erb
+++ b/app/views/public/searches/search_result.html.erb
@@ -11,7 +11,7 @@
       <% end %>
     </tbody>
   <% else %>
-    <!--検索対象モデルがUserではない時(= 検索対象モデルがBookの時) -->
+    <!--検索対象モデルがUserではない時(= 検索対象モデルがPostの時) -->
     <tbody>
       <% @posts.each do |post| %>
         <tr>
