--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,6 +43,8 @@
                 <li>
                   <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
                 </li>
+                <!--ヘッダー下部 検索窓-->
+                <%= render 'public/searches/search', search: @searches %>
               <% else %>
                 <!--<li>-->
                 <!--  <%= link_to "Home", homes_path %>-->
@@ -62,8 +64,7 @@
         </div>
       </nav>
     
-    <!--ヘッダー下部 検索窓-->
-    <!--<%= render 'public/searches/_search', search: @searches %>-->
+    
       
     </header>
     <%= yield %>
