--- a/app/views/public/posts/show.html.erb
+++ b/app/views/public/posts/show.html.erb
@@ -52,37 +52,35 @@
           </div>
         </div>
         <hr>
-        <div class="comments card-text">
-          <h4 class="mt-3"><%= @post.comments.count %>件コメント</h4>
+        
+        <!--コメント-->
+        <div>
+          <p>コメント件数：<%= @post.comments.count %></p>
           <% @post.comments.each do |comment| %>
-            <div class="media border mb-3">
-              <%= image_tag comment.user.get_profile_image(100,100) %>
-              <div class="media-body ml-4 p-3">
-                <p><%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %></p>
-                <p><%= comment.comment %></p>
-                <% if comment.user == current_user %>
-                  <%= link_to "削除", post_comment_path(comment.post_id, comment), method: :delete, class: "btn btn-danger pull-right" %>
-                <% end %>
-              </div>
-            </div>
+            <p><%= image_tag comment.user.get_profile_image(100,100) %></p>
+            <%= comment.user.name %>
+            <%= comment.created_at.strftime('%Y/%m/%d') %><%= comment.comment %>
+            <% if comment.user == current_user %>
+              <%= link_to "削除", post_comment_path(comment.post, comment), method: :delete %>
+            <% end %>
           <% end %>
         </div>
+        <div>
+          <%= form_with model: [@post, @comment] do |f| %>
+            <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+            <%= f.submit "送信する" %>
+          <% end %>
+        </div>
+        
         <hr>
+        <!--投稿ユーザー情報-->
         <div class="user-link">
           <p>投稿ユーザー画像：<%= image_tag @post.user.get_profile_image(100,100) %></p>
           <p>ユーザーネーム：<%= @post.user.name %></p>
           <p>投稿日時：<%= @post.created_at.strftime('%Y/%m/%d') %></p>
         </div>
+        
         <hr>
-        <div class="new-comment card-text">
-          <%= form_with(model:[@post, @comment]) do |f| %>
-            <div class="form-group">
-              <label for="exampleFormControlTextarea1">コメントする</label>
-              <%= f.text_area :comment, rows:'5', class: "form-control",placeholder: "コメントをここに" %>
-            </div>
-            <%= f.submit "送信する", class:"btn btn-lg btn-info mt-2 float-right" %>
-          <% end %>
-        </div>
       </div>
     </div>
   </div>
