--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,14 +25,14 @@
           <div class="navbar-collapse collapse show" id="navbarNavDropdown" style>
             <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
-                <!--<li>-->
-                <!--  <%= link_to "Home", homes_path %>-->
-                <!--</li>-->
                 <li>
                   <%= link_to "新規投稿", new_post_path %>
                 </li>
                 <li>
                   <%= link_to "投稿一覧", posts_path %>
+                </li>
+                <li>
+                  <%= link_to "ユーザー一覧", users_path %>
                 </li>
                 <li>
                   <%= link_to "マイページ", user_path(current_user.id) %>
@@ -46,9 +46,6 @@
                 <!--ヘッダー下部 検索窓-->
                 <%= render 'public/searches/search', search: @searches %>
               <% else %>
-                <!--<li>-->
-                <!--  <%= link_to "Home", homes_path %>-->
-                <!--</li>-->
                 <li>
                   <%= link_to "新規登録", new_user_registration_path %>
                 </li>
