--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,15 +2,16 @@
 <html>
   <head>
     <title>Love-shopping</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    
+    <script src="https://kit.fontawesome.com/354c6003fa.js" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body class="d-flex flex-column vh-100">
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
@@ -22,48 +23,72 @@
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
-          <div class="navbar-collapse collapse show" id="navbarNavDropdown" style>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
-              <% if user_signed_in? %>
-                <li>
-                  <%= link_to "新規投稿", new_post_path %>
-                </li>
-                <li>
-                  <%= link_to "投稿一覧", posts_path %>
-                </li>
-                <li>
-                  <%= link_to "ユーザー一覧", users_path %>
-                </li>
-                <li>
-                  <%= link_to "マイページ", user_path(current_user.id) %>
-                </li>
-                <li>
-                  <%= link_to "About", about_path %>
-                </li>
-                <li>
-                  <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
-                </li>
-                <!--ヘッダー下部 検索窓-->
-                <%= render 'public/searches/search', search: @searches %>
-              <% else %>
-                <li>
-                  <%= link_to "新規登録", new_user_registration_path %>
-                </li>
-                <li>
-                  <%= link_to "ログイン", new_user_session_path %>
-                </li>
-                <li>
-                  <%= link_to "About", about_path %>
-                </li>
-              <% end %>
+            <% if user_signed_in? %>
+              <li>
+                <%= link_to user_path(current_user),class: 'nav-link text-light' do %>
+                  <i class="fas fa-home"></i> Home
+                <% end %>
+              </li>
+              <li>
+                <%=  link_to users_path,class: 'nav-link text-light' do %>
+                  <i class="fas fa-users"></i> Users
+                <% end %>
+              </li>
+              <li>
+                <%=  link_to posts_path ,class: 'nav-link text-light' do %>
+                  <i class="fas fa-book-open"></i> Posts
+                <% end %>
+              </li>
+              <li>
+                <%=  link_to new_post_path ,class: 'nav-link text-light' do %>
+                  <i class="fas fa-book-open"></i> New_Posts
+                <% end %>
+              <li>
+                <%= link_to destroy_user_session_path, method: :delete,class: 'nav-link text-light' do %>
+                  <i class="fas fa-sign-out-alt"></i> Log out
+                <% end %>
+              </li>
+              <!--ヘッダー下部 検索窓-->
+              <%= render 'public/searches/search', search: @searches %>
+            <% else %>
+              <li>
+                <%= link_to homes_path,class: 'nav-link text-light' do %>
+                  <i class="fas fa-home"></i> Home
+                <% end %>
+              </li>
+              <li>
+                <%= link_to about_path, class: 'nav-link text-light' do %>
+                  <i class="fas fa-link"></i> About
+                <% end %>
+              </li>
+              <li>
+                <%= link_to new_user_registration_path,class: 'nav-link text-light' do %>
+                  <i class="fas fa-user-plus"></i> Sign up
+                <% end %>
+              </li>
+              <li>
+                <%= link_to new_user_session_path ,class: 'nav-link text-light' do %>
+                  <i class="fas fa-sign-in-alt"></i> Log in
+                <% end %>
+              </li>
+            <% end %>
             </ul>
           </div>
         </div>
       </nav>
-    
-    
-      
     </header>
-    <%= yield %>
+    
+    <div>
+      <%= flash[:notice] %>
+    </div>
+    
+      <%= yield %>
+      
+    <footer class="mx-auto">
+      <p>CopyRight Infratop.inc</p>
+    </footer>
+    
   </body>
 </html>
