--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -43,7 +43,7 @@
               </li>
               <li>
                 <%=  link_to new_post_path ,class: 'nav-link text-light' do %>
-                  <i class="fas fa-book-open"></i> New_Posts
+                  <i class="fa-solid fa-plus"></i> New_Posts
                 <% end %>
               <li>
                 <%= link_to destroy_user_session_path, method: :delete,class: 'nav-link text-light' do %>
@@ -87,7 +87,7 @@
       <%= yield %>
       
     <footer class="mx-auto">
-      <p>CopyRight Infratop.inc</p>
+      <p>CopyRight</p>
     </footer>
     
   </body>
