--- a/app/views/public/posts/_side_bar.html.erb
+++ b/app/views/public/posts/_side_bar.html.erb
@@ -1,1 +1,42 @@
-<!--左側-->
+<!-- 左側 -->
+<div class="col-md-3">
+
+  <h4>User info</h4>
+  <% if user.profile_image.attached? %>
+    <%= image_tag user.get_profile_image(width, height), class: "mt-3 rounded-circle" %>
+  <% else %>
+    <%= image_tag "/app/assets/images/default_profile_image.jpg", class: "mt-3 rounded-circle" %>
+  <% end %>  
+  
+  <table class="table table-striped">
+    <table class=user_table>
+      <tr><th>name</th><th><%= user.name %></th></tr>
+      <tr><th>introduction</th><th><%= user.introduction %></th></tr>
+    </table></br>
+  </table>
+  
+  <div class="row">
+      <%= link_to edit_user_path(user.id), class: "btn btn-outline-secondary btn-block" do %>
+        <i class="fa-solid fa-user-gear"></i>
+    <% end %>
+  </div>
+
+  <div class="row">
+    <div class="btn-block edit_user" href="/users/edit">
+      <div class= data-icon="user-gear" role="img">
+        <path fill="currentColor"></path>
+      </div>
+    </div>
+  </div>
+
+  <h4>New post</h4>
+  <%= form_with model: Post.new, url: posts_path, method: :post do |f| %>
+    <p>Title</p>
+    <%= f.text_field :title %>
+  	
+    <p>Opinion</p>
+    <%= f.text_area :body %></br>
+  	<%= f.submit 'Create Book' %>
+  <% end %>
+
+</div>
