--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -33,7 +33,7 @@
             <div class="col-10">
               <p class="card-title">
                 <%= link_to(post_path(post.id), class:"text-dark") do %>
-                  <strong><i class="fa-regular fa-flag"></i><span> <%= post.title %></span></strong>
+                  <strong><i class="fa-regular fa-flag"></i><span>タイトル： <%= post.title %></span></strong>
                 <% end %>
               </p>
               <p class="card-text">本文：<%= post.body %></p>
