--- a/app/views/public/users/index.html.erb
+++ b/app/views/public/users/index.html.erb
@@ -1,5 +1,5 @@
 <div class="col-md-8 offset-md-1">
-  <h4>Users</h4>
+  <h4>User</h4>
     <table class="table table-striped">
       <table class="books_table">
         <tr>
