--- a/app/views/public/posts/_side_bar.html.erb
+++ b/app/views/public/posts/_side_bar.html.erb
@@ -15,8 +15,8 @@
     </table></br>
   </table>
   
-  <div class="row">
-      <%= link_to edit_user_path(user.id), class: "btn btn-outline-secondary btn-block" do %>
+  <div class="">
+      <%= link_to edit_user_path(user.id), class: "btn btn-outline-secondary px-5" do %>
         <i class="fa-solid fa-user-gear"></i>
     <% end %>
   </div>
