--- a/app/views/public/posts/index.html.erb
+++ b/app/views/public/posts/index.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="p-4">
   
 <% if @post && @post.errors.any? %>
   <%= @post.errors.count %>errors prohibited this obj from being saved:
@@ -15,22 +15,23 @@
     <%= render 'side_bar', user: current_user, width: 100, height: 100 %>
     
     <!-- 右側 -->
-    <div class="card-list-container py-5">
+    <div class="card-list-container row col-md-9 py-5">
       <% @posts.each do |post| %>
-      <div class="card w-50 mx-auto mt-4 shadow-lg">
+      
+      <div class="card  col-md-3 mt-4 mr-2">
         <%= link_to post_path(post.id) do %>
           <%= image_tag post.get_image, class:"card-img-top"; %>
         <% end %>
         <div class="card-body">
           <div class="row">
-            <div class="col-2">
+            <div class="col-9">
               <% if post.user %>
                 <%= image_tag post.user.get_profile_image(100, 100), class: "mt-3 rounded-circle" %>
               <% else %>
                 <%= image_tag "/app/assets/images/default_profile_image.jpg", class: "mt-3 rounded-circle" %>
               <% end %>
             </div>
-            <div class="col-10">
+            <div class="col-9">
               <p class="card-title">
                 <%= link_to(post_path(post.id), class:"text-dark") do %>
                   <strong><i class="fa-regular fa-flag"></i><span>タイトル： <%= post.title %></span></strong>
