--- a/app/views/public/posts/_side_bar.html.erb
+++ b/app/views/public/posts/_side_bar.html.erb
@@ -15,7 +15,7 @@
     </table></br>
   </table>
   
-  <div class="">
+  <div class="row">
       <%= link_to edit_user_path(user.id), class: "btn btn-outline-secondary px-5" do %>
         <i class="fa-solid fa-user-gear"></i>
     <% end %>
