--- a/app/views/public/searches/_search.html.erb
+++ b/app/views/public/searches/_search.html.erb
@@ -4,7 +4,7 @@
   <div class="search_form">
     <%= form_with url: search_path, local: true, method: :get do |f| %>
       <%= f.text_field :word %>
-      <%= f.select :range, options_for_select([['ユーザー名'], ['投稿内容']]) %>
+      <%= f.select :range, options_for_select([['ユーザー名','User'], ['投稿内容','Post']]) %>
       <%= f.select :search, options_for_select([["完全一致","perfect_match"], ["部分一致","partial_match"]]) %>
       <%= f.submit "検索", class: "btn btn-primary" %>
     <% end %>
