--- a/app/views/public/searches/search.html.erb
+++ b/app/views/public/searches/search.html.erb
@@ -1,25 +1,59 @@
-<h2>Results index</h2>
+<% if @post && @post.errors.any? %>
+  <%= @post.errors.count %>errors prohibited this obj from being saved:
+  <ul>
+    <% @post.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+    <% end %>
+  </ul>
+<% end %>
 
-<table class="table table-hover table-inverse">
-  <!--検索対象モデルがUserの時 -->
-  <% if @range == "User" %>
-    <tbody>
-      <% @users.each do |user| %>
-        <tr>
-          <td><%= user.name %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  <% else %>
-    <!--検索対象モデルがUserではない時(= 検索対象モデルがPostの時) -->
-    <tbody>
-      <% @posts.each do |post| %>
-        <tr>
-          <td><%= image_tag post.get_image(50, 50) %></td>
-          <td><%= post.title %></td>
-          <td><%= post.body %></td>
-        </tr>
-      <% end %>
-    </tbody>
-  <% end %>
-</table>
+
+
+<div class="container">
+  <div class="row"> 
+
+    <!--左側-->
+    
+    <!--右側-->
+    <!--検索対象モデルがUserの時 -->
+    <div class="card-list-container row col-md-9 py-5">
+          <div class="col-md-9 offset-md-1">
+            <h4>User</h4>
+              <table class="table table-striped">
+              <table class="books_table">
+                <tr>
+                  <th>image</th>
+                  <th>name</th>
+                  <th></th>
+                </tr>
+                <tbody>
+                  <% if @range == "User" %>
+                    <% @users.each do |user| %>
+                    <tr>
+                      <td><%= image_tag user.get_profile_image(100, 100) %></td>
+                      <td><%= user.name %></td>
+                      <td><%=link_to "Show", user_path(user) %></td>
+                    </tr>
+                  <% end %>
+                </tbody>
+              </table>
+              </table>
+          </div>
+        </div>
+        
+      
+    <% else %>
+      <!-- 検索対象モデルがPostの時 -->
+      <tbody>
+        <% @posts.each do |post| %>
+          <tr>
+            <td><%= image_tag post.get_image %></td>
+            <td><%= post.title %></td>
+            <td><%= post.body %></td>
+          </tr>
+        <% end %>
+      </tbody>
+    <% end %>
+    
+  </div>
+</div>
